--- a/recipe/vinca.yaml
+++ b/recipe/vinca.yaml
@@ -5,11 +5,30 @@ conda_index:
   - conda-forge.yaml
 
 packages_skip_by_deps:
-
-packages_select_by_deps:
   - ros_comm
   - ros
   - roslint
   - rqt
+
+packages_select_by_deps:
+  - rqt_action
+  - rqt_bag
+  - rqt_bag_plugins
+  - rqt_console
+  - rqt_dep
+  - rqt_graph
+  - rqt_launch
+  - rqt_logger_level
+  - rqt_msg
+  - rqt_plot
+  - rqt_publisher
+  - rqt_py_common
+  - rqt_py_console
+  - rqt_service_caller
+  - rqt_shell
+  - rqt_srv
+  - rqt_top
+  - rqt_topic
+  - rqt_web
 
 patch_dir: patch
