expand to geometry2

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -3,37 +3,35 @@ package:
   version: 2020.03.26
 
 source:
-  - git_url: https://github.com/ros-gbp/geometry-release.git
-    git_rev: release/noetic/tf_conversions/1.13.0-1
-    folder: ros-noetic-tf-conversions/src/work
-    patches:
-      - patch/ros-noetic-tf-conversions.patch
-  - git_url: https://github.com/ros-gbp/geometry-release.git
-    git_rev: release/noetic/geometry/1.13.0-1
-    folder: ros-noetic-geometry/src/work
-  - git_url: https://github.com/ros-gbp/geometry-release.git
-    git_rev: release/noetic/tf/1.13.0-1
-    folder: ros-noetic-tf/src/work
-    patches:
-      - patch/ros-noetic-tf.patch
-  - git_url: https://github.com/ros-gbp/geometry-release.git
-    git_rev: release/noetic/eigen_conversions/1.13.0-1
-    folder: ros-noetic-eigen-conversions/src/work
-    patches:
-      - patch/ros-noetic-eigen-conversions.patch
-  - git_url: https://github.com/ros-gbp/geometry-release.git
-    git_rev: release/noetic/kdl_conversions/1.13.0-1
-    folder: ros-noetic-kdl-conversions/src/work
-    patches:
-      - patch/ros-noetic-kdl-conversions.patch
+  - git_url: https://github.com/ros-gbp/geometry2-release.git
+    git_rev: release/noetic/tf2_geometry_msgs/0.7.0-1
+    folder: ros-noetic-tf2-geometry-msgs/src/work
+  - git_url: https://github.com/ros-gbp/geometry2-release.git
+    git_rev: release/noetic/tf2_tools/0.7.0-1
+    folder: ros-noetic-tf2-tools/src/work
+  - git_url: https://github.com/ros-gbp/geometry2-release.git
+    git_rev: release/noetic/tf2_bullet/0.7.0-1
+    folder: ros-noetic-tf2-bullet/src/work
+  - git_url: https://github.com/ros-gbp/geometry2-release.git
+    git_rev: release/noetic/tf2_sensor_msgs/0.7.0-1
+    folder: ros-noetic-tf2-sensor-msgs/src/work
+  - git_url: https://github.com/ros-gbp/geometry2-release.git
+    git_rev: release/noetic/tf2_kdl/0.7.0-1
+    folder: ros-noetic-tf2-kdl/src/work
+  - git_url: https://github.com/ros-gbp/geometry2-release.git
+    git_rev: release/noetic/geometry2/0.7.0-1
+    folder: ros-noetic-geometry2/src/work
+  - git_url: https://github.com/ros-gbp/geometry2-release.git
+    git_rev: release/noetic/tf2_eigen/0.7.0-1
+    folder: ros-noetic-tf2-eigen/src/work
 
 build:
   number: 0
   skip: true  # [not win64]
 
 outputs:
-  - name: ros-noetic-tf-conversions
-    version: 1.13.0
+  - name: ros-noetic-tf2-geometry-msgs
+    version: 0.7.0
     requirements:
       build:
         - "{{ compiler('cxx') }}"
@@ -41,88 +39,93 @@ outputs:
         - ninja
         - cmake
       host:
-        - eigen
         - orocos-kdl
         - python {{ python }}
         - python-orocos-kdl
         - ros-noetic-catkin
         - ros-noetic-geometry-msgs
-        - ros-noetic-kdl-conversions
-        - ros-noetic-tf
-      run:
-        - eigen
-        - orocos-kdl
-        - python {{ python }}
-        - python-orocos-kdl
-        - ros-noetic-geometry-msgs
-        - ros-noetic-kdl-conversions
-        - ros-noetic-tf
-    script: bld_catkin.bat
-  - name: ros-noetic-geometry
-    version: 1.13.0
-    requirements:
-      build:
-        - "{{ compiler('cxx') }}"
-        - "{{ compiler('c') }}"
-        - ninja
-        - cmake
-      host:
-        - python {{ python }}
-        - ros-noetic-angles
-        - ros-noetic-catkin
-        - ros-noetic-eigen-conversions
-        - ros-noetic-kdl-conversions
-        - ros-noetic-tf
-        - ros-noetic-tf-conversions
-      run:
-        - python {{ python }}
-        - ros-noetic-angles
-        - ros-noetic-eigen-conversions
-        - ros-noetic-kdl-conversions
-        - ros-noetic-tf
-        - ros-noetic-tf-conversions
-    script: bld_catkin.bat
-  - name: ros-noetic-tf
-    version: 1.13.0
-    requirements:
-      build:
-        - "{{ compiler('cxx') }}"
-        - "{{ compiler('c') }}"
-        - ninja
-        - cmake
-      host:
-        - graphviz
-        - python {{ python }}
-        - ros-noetic-angles
-        - ros-noetic-catkin
-        - ros-noetic-geometry-msgs
-        - ros-noetic-message-filters
-        - ros-noetic-message-generation
-        - ros-noetic-message-runtime
-        - ros-noetic-rosconsole
-        - ros-noetic-roscpp
+        - ros-noetic-ros-environment
         - ros-noetic-rostest
-        - ros-noetic-rostime
-        - ros-noetic-rosunit
-        - ros-noetic-roswtf
-        - ros-noetic-sensor-msgs
-        - ros-noetic-std-msgs
+        - ros-noetic-tf2
         - ros-noetic-tf2-ros
       run:
-        - graphviz
+        - orocos-kdl
         - python {{ python }}
+        - python-orocos-kdl
         - ros-noetic-geometry-msgs
-        - ros-noetic-message-filters
-        - ros-noetic-message-runtime
-        - ros-noetic-rosconsole
-        - ros-noetic-roscpp
-        - ros-noetic-roswtf
-        - ros-noetic-sensor-msgs
-        - ros-noetic-std-msgs
+        - ros-noetic-tf2
         - ros-noetic-tf2-ros
     script: bld_catkin.bat
-  - name: ros-noetic-eigen-conversions
-    version: 1.13.0
+  - name: ros-noetic-tf2-tools
+    version: 0.7.0
+    requirements:
+      build:
+        - "{{ compiler('cxx') }}"
+        - "{{ compiler('c') }}"
+        - ninja
+        - cmake
+      host:
+        - python {{ python }}
+        - ros-noetic-catkin
+        - ros-noetic-tf2
+        - ros-noetic-tf2-msgs
+        - ros-noetic-tf2-ros
+      run:
+        - python {{ python }}
+        - ros-noetic-tf2
+        - ros-noetic-tf2-msgs
+        - ros-noetic-tf2-ros
+    script: bld_catkin.bat
+  - name: ros-noetic-tf2-bullet
+    version: 0.7.0
+    requirements:
+      build:
+        - "{{ compiler('cxx') }}"
+        - "{{ compiler('c') }}"
+        - ninja
+        - cmake
+      host:
+        - bullet
+        - pkg-config
+        - python {{ python }}
+        - ros-noetic-catkin
+        - ros-noetic-geometry-msgs
+        - ros-noetic-tf2
+      run:
+        - bullet
+        - python {{ python }}
+        - ros-noetic-geometry-msgs
+        - ros-noetic-tf2
+    script: bld_catkin.bat
+  - name: ros-noetic-tf2-sensor-msgs
+    version: 0.7.0
+    requirements:
+      build:
+        - "{{ compiler('cxx') }}"
+        - "{{ compiler('c') }}"
+        - ninja
+        - cmake
+      host:
+        - eigen
+        - python {{ python }}
+        - ros-noetic-catkin
+        - ros-noetic-cmake-modules
+        - ros-noetic-geometry-msgs
+        - ros-noetic-rostest
+        - ros-noetic-sensor-msgs
+        - ros-noetic-tf2
+        - ros-noetic-tf2-ros
+      run:
+        - eigen
+        - python {{ python }}
+        - python-orocos-kdl
+        - ros-noetic-rospy
+        - ros-noetic-sensor-msgs
+        - ros-noetic-tf2
+        - ros-noetic-tf2-ros
+    script: bld_catkin.bat
+  - name: ros-noetic-tf2-kdl
+    version: 0.7.0
     requirements:
       build:
         - "{{ compiler('cxx') }}"
@@ -134,17 +137,20 @@ outputs:
         - orocos-kdl
         - python {{ python }}
         - ros-noetic-catkin
-        - ros-noetic-geometry-msgs
-        - ros-noetic-std-msgs
+        - ros-noetic-cmake-modules
+        - ros-noetic-ros-environment
+        - ros-noetic-rostest
+        - ros-noetic-tf2
+        - ros-noetic-tf2-ros
       run:
         - eigen
         - orocos-kdl
         - python {{ python }}
-        - ros-noetic-geometry-msgs
-        - ros-noetic-std-msgs
+        - ros-noetic-tf2
+        - ros-noetic-tf2-ros
     script: bld_catkin.bat
-  - name: ros-noetic-kdl-conversions
-    version: 1.13.0
+  - name: ros-noetic-geometry2
+    version: 0.7.0
     requirements:
       build:
         - "{{ compiler('cxx') }}"
@@ -152,14 +158,51 @@ outputs:
         - ninja
         - cmake
       host:
-        - orocos-kdl
         - python {{ python }}
         - ros-noetic-catkin
-        - ros-noetic-geometry-msgs
+        - ros-noetic-tf2
+        - ros-noetic-tf2-bullet
+        - ros-noetic-tf2-eigen
+        - ros-noetic-tf2-geometry-msgs
+        - ros-noetic-tf2-kdl
+        - ros-noetic-tf2-msgs
+        - ros-noetic-tf2-py
+        - ros-noetic-tf2-ros
+        - ros-noetic-tf2-sensor-msgs
+        - ros-noetic-tf2-tools
       run:
-        - orocos-kdl
+        - python {{ python }}
+        - ros-noetic-tf2
+        - ros-noetic-tf2-bullet
+        - ros-noetic-tf2-eigen
+        - ros-noetic-tf2-geometry-msgs
+        - ros-noetic-tf2-kdl
+        - ros-noetic-tf2-msgs
+        - ros-noetic-tf2-py
+        - ros-noetic-tf2-ros
+        - ros-noetic-tf2-sensor-msgs
+        - ros-noetic-tf2-tools
+    script: bld_catkin.bat
+  - name: ros-noetic-tf2-eigen
+    version: 0.7.0
+    requirements:
+      build:
+        - "{{ compiler('cxx') }}"
+        - "{{ compiler('c') }}"
+        - ninja
+        - cmake
+      host:
+        - eigen
+        - python {{ python }}
+        - ros-noetic-catkin
+        - ros-noetic-cmake-modules
+        - ros-noetic-geometry-msgs
+        - ros-noetic-tf2
+      run:
+        - eigen
         - python {{ python }}
         - ros-noetic-geometry-msgs
+        - ros-noetic-tf2
     script: bld_catkin.bat
 
 about:
